<resources>
    <string name="app_name">PrepMovilesEV2</string>
    <string name="mas_informacion_sobre_iru_ea">Mas Informacion sobre Iruñea</string>
    <string name="las_condiciones_de_su_cuenca_han_favorecido_el_asentamiento_humano_desde_el_inicio_de_los_tiempos_los_hallazgos_de_industria_l_tica_herramientas_de_piedra_que_se_han_realizado_en_las_terrazas_del_r_o_arga_dan_testimonio_de_la_ocupaci_n_humana_de_estas_tierras_hace_75_000_a_os_durante_la_excavaci_n_en_los_a_os_2001_2003_de_la_plaza_del_castillo_se_encontr_un_menhir_que_no_se_ha_logrado_datar">Las condiciones de su cuenca han favorecido el asentamiento humano desde el inicio de los tiempos. Los hallazgos de industria lítica (herramientas de piedra) que se han realizado en las terrazas del río Arga dan testimonio de la ocupación humana de estas tierras hace 75 000 años. Durante la excavación en los años 2001-2003 de la plaza del Castillo se encontró un menhir que no se ha logrado datar.</string>
    <string name="sobre_el_primer_milenio_a_c_en_la_actual_ciudad_de_pamplona_se_alzaba_un_poblado_de_vascones_que_a_decir_de_algunos_ya_recib_a_el_nombre_de_iru_a_55_tambi_n_se_ha_considerado_y_es_m_s_probable_que_la_denominaci_n_bengoda_es_vascona_y_que_correspondi_a_la_actual_pamplona_capital_del_territorio_vasc_n">Sobre el primer milenio a. C. en la actual ciudad de Pamplona se alzaba un poblado de vascones que a decir de algunos ya recibía el nombre de Iruña.55​ También se ha considerado y es más probable, que la denominación Bengoda es vascona y que correspondió a la actual Pamplona, capital del territorio vascón.</string>
    <string name="historia_de_iru_a">HISTORIA DE IRUÑA</string>
    <string name="tras_la_conquista_musulmana_de_los_dominios_visigodos_y_las_posteriores_incursiones_de_las_tropas_carolingias_en_778_806_812_y_824_en_el_siglo_ix_pamplona_se_consolida_dentro_de_un_emergente_n_cleo_cristiano_con_estrechos_lazos_din_sticos_y_regionales_con_los_banu_qasi_que_da_lugar_a_la_creaci_n_del_reino_de_pamplona">Tras la conquista musulmana de los dominios visigodos y las posteriores incursiones de las tropas carolingias en 778, 806, 812 y 824, en el siglo ix, Pamplona se consolida dentro de un emergente núcleo cristiano con estrechos lazos dinásticos y regionales con los Banu Qasi, que da lugar a la creación del Reino de Pamplona.</string>
    <string name="reino_de_pamplona">Reino de Pamplona</string>
    <string name="este_reino_tuvo_como_primer_caudillo_a_igo_arista_c_816_851_de_la_dinast_a_arista_iga_que_fueron_sucedidos_en_el_a_o_905_por_la_dinast_a_jimena_el_reino_pasar_a_a_denominarse_en_el_siglo_xii_durante_el_reinado_de_sancho_vi_el_sabio_reino_de_navarra_durante_el_siglo_x_se_instalaron_en_la_ciudad_nuevos_pobladores_principalmente_francos">Este reino tuvo como primer caudillo a Íñigo Arista (c. 816-851) de la dinastía Arista-Íñiga que fueron sucedidos en el año 905 por la dinastía Jimena. El reino pasaría a denominarse en el siglo xii, durante el reinado de Sancho VI el Sabio, Reino de Navarra. Durante el siglo x se instalaron en la ciudad nuevos pobladores, principalmente francos.</string>
    <string name="edad_media">Edad Media</string>
    <string name="a_la_llegada_de_los_musulmanes_en_el_711_el_rey_rodrigo_se_encontraba_combatiendo_a_los_vascones_en_pamplona_y_en_menos_de_cinco_a_os_las_tropas_rabes_y_bereberes_alcanzaron_la_ciudad_someti_ndola_mediante_compromiso_adoptado_entre_los_comandantes_del_califato_omeya_y_representantes_de_la_ciudad">A la llegada de los musulmanes en el 711, el rey Rodrigo se encontraba combatiendo a los vascones en Pamplona y en menos de cinco años las tropas árabes y bereberes alcanzaron la ciudad, sometiéndola mediante compromiso adoptado entre los comandantes del Califato Omeya y representantes de la ciudad.</string>
    <string name="en_el_siglo_v_el_poder_romano_es_sustituido_por_el_visigodo_pero_stos_al_contrario_que_los_romanos_no_alcanzaron_una_buena_relaci_n_con_los_vascones_la_ciudad_fue_sede_episcopal_de_la_iglesia_visigoda_58_y_en_ella_residieron_visigodos_por_las_necr_polis_de_la_poca_que_se_han_hallado_la_mala_relaci_n_entre_vascones_y_visigodos_ha_dado_pie_a_una_cierta_pol_mica_sobre_la_presencia_de_stos_en_la_ciudad">En el siglo v el poder romano es sustituido por el visigodo, pero éstos, al contrario que los romanos, no alcanzaron una buena relación con los vascones. La ciudad fue sede episcopal de la iglesia visigoda,58​ y en ella residieron visigodos por las necrópolis de la época que se han hallado. La mala relación entre vascones y visigodos ha dado pie a una cierta polémica sobre la presencia de éstos en la ciudad.</string>
    <string name="iru_a">Iruña</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>